# ROS-3rd-Final-Robot-Project

./: .gitignore  README.md  arduino_protocol.ipynb  package_commands.txt  requirements.txt
auto_drive_control/: setup.cfg  setup.py
auto_drive_control/auto_drive_control/: arduino_protocol_sender.py  connect_arduino.py  ultrasonic_dist_subscliber.py
auto_drive_control/launch/: arduino.launch.py
diagram/: Control_PC  UML  database_structure  draw_map  fastdds  kiosk  robot_state  system_structure
gui_package/: .env  setup.py
gui_package/gui_package/: (backup)generate_test_case.py  (backup)gui_4_controlPC.py  controller_talker.py.py  entrance.py  generate_test_case.py  generate_test_case.ui  gui_4_controlPC .py  gui_4_controlPC.py  gui_4_controlPC.ui  gui_4_kiosk.py  gui_node.py  kiosk.ui  kiosk_2.ui  main_server.py  show_multiple_GUI.py  solution.py  table_park_system_log.sql  table_robot_status.sql
install/: local_setup.sh  setup.sh
lidar_package/: setup.py
log/: latest_build  latest_list
src/: minibot_data.ipynb  nav2_params.yaml  package_commands.txt  yolo_v8_result_comparison.txt
src/aruco_package_msgs/: CMakeLists.txt  package.xml
src/auto_drive_control/: package.xml  setup.py
src/call_gazebo/: package.xml  setup.py  (+1 more)
src/communication/: package.xml  setup.py
src/communication/communication/: controller_listener.py  controller_talker.py  listener.py  minibot_listener.py  minibot_talker.py  talker.py
src/communication/launch/: controller.launch.py  minibot.launch.py
ultrasonic_dist/: setup.py
vision_object_detector/: package.xml  setup.py
(+260 files in other folders)
