<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication</name>
  <version>0.0.0</version>
  <description>서로 다른 ROS_DOMAIN_ID를 가진 로봇 3대와 통신</description>
  <maintainer email="sungho9807@gmail.com">jo</maintainer>
  <license>조성호</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>communication_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
